# py-gpmf-parser

./: .gitignore  .gitmodules  Dockerfile  README.md  build.py  pyproject.toml  setup.cfg  setup.py  setup.py.bak
.github/workflows/: pip-publish.yml  python-publish.yml
docs/: index.rst  python_example.rst
py_gpmf_parser/: __init__.py  gopro_telemetry_extractor.py
pypackage/: build-wheel-linux.sh  build-wheels-linux.sh
src/: gpmf_bindings.cpp  main.cpp
tests/: test.py  test_gp_tel_extractor.py  test_mp4.py
