[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_gpmf_parser"
version = "0.0.4"
authors = [
    {name = "Steffen Urban", email = "urbste@gmail.com"},
]
description = "Python bindings for the gpmf-parser library using pybind"
readme = "README.md"
requires-python = ">=3.8"
urls = {Homepage = "https://github.com/urbste/py-gpmf-parser"}
license-files = ["LICEN[CS]E*"]

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py38"
