[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.10.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_gpmf_parser"
version = "0.0.4"
authors = [
    { name = "Steffen Urban", email = "urbste@gmail.com" },
]
description = "Python bindings for the gpmf-parser library using pybind"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
urls = { Homepage = "https://github.com/urbste/py-gpmf-parser" }
dependencies = [
    "pybind11>=3.0.0",
    "setuptools>=75.3.2",
]

[tool.setuptools]
packages = ["py_gpmf_parser"]

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = ["E501"]
target-version = "py38"
