[metadata]
name = py_gpmf_parser
version = 0.0.4
description = Python bindings for the gpmf-parser library using pybind
long_description = file: README.md
long_description_content_type = text/markdown
author = Steffen Urban
author_email = urbste@gmail.com
license = Apache-2.0
url = https://github.com/urbste/py-gpmf-parser

[options]
packages = find:
python_requires = >=3.8

[options.package_data]
* = *.so

